--- a/gettext-runtime/libasprintf/ChangeLog
+++ b/gettext-runtime/libasprintf/ChangeLog
@@ -1,3 +1,13 @@
+2013-03-04  Miguel Angel Arruga Vivas  <rosen644835@gmail.com>  (tiny change)
+
+	Add 'autosprintf::operator='. Needed because destructor
+	is not trivial.
+	Reported at <https://savannah.gnu.org/bugs/?33102>
+	* autosprintf.in.h (autosprintf::operator=): New function.
+	Thanks to Daiki Ueno for pointing a better copy-and-swap
+	idiom use.
+	* autosprintf.cc (autosprintf::operator=): Likewise.
+
 2013-01-17  Daiki Ueno  <ueno@gnu.org>
 
 	Fix link errors related to C99-style extern inline.
