--- a/gettext-tools/doc/ChangeLog
+++ b/gettext-tools/doc/ChangeLog
@@ -1,3 +1,7 @@
+2013-03-12  Andreas Stricker  <astricker@futurelab.ch>  (tiny change)
+
+	* msgfmt.texi (PO Format): A note about the header entry
+
 2013-02-15  Daiki Ueno  <ueno@gnu.org>
 
 	* msgfmt.texi (Input file location): Output file is not PO.
