--- a/gettext-tools/tests/ChangeLog
+++ b/gettext-tools/tests/ChangeLog
@@ -1,3 +1,8 @@
+2013-08-13  Miguel Angel Arruga Vivas  <rosen644835@gmail.com>
+
+	* xgettext-glade-5: Add a test for --extract-all option behavior.
+	* xgettext-glade-6: Likewise.
+
 2013-08-12  Daiki Ueno  <ueno@gnu.org>
 
 	* xgettext-glade-7: Add a test for multi-line extracted comments.
