--- a/gettext-tools/tests/ChangeLog
+++ b/gettext-tools/tests/ChangeLog
@@ -1,3 +1,9 @@
+2013-03-14  Miguel Angel Arruga Vivas  <rosen644835@gmail.com>
+
+	Test msgctxt extraction on glade files.
+	* Makefile.am (TESTS): Add xgettext-glade-5.
+	* xgettext-glade-5: New test for msgctxt Glade2 extraction.
+
 2012-12-25  Daiki Ueno  <ueno@gnu.org>
 
 	* gettext-0.18.2 released.
