--- a/gettext-tools/doc/gettext.texi
+++ b/gettext-tools/doc/gettext.texi
@@ -1711,7 +1711,7 @@ idea of the precise format of a PO file.  On the other hand, those
 wishing to modify PO files by hand should carefully continue reading on.
 
 An empty @var{untranslated-string} is reserved to contain the header
-entry with the meta information (@xref{Header Entry}).  This header
+entry with the meta information (@pxref{Header Entry}).  This header
 entry should be the first entry of the file.  The empty
 @var{untranslated-string} is reserved for this purpose and must
 not be used anywhere else.
