--- a/gettext-tools/examples/ChangeLog
+++ b/gettext-tools/examples/ChangeLog
@@ -1,3 +1,7 @@
+2013-04-02  Daiki Ueno  <ueno@gnu.org>
+
+	* Makefile.am (clean-local): New rule to remove tmp-hello-*.
+
 2012-12-25  Daiki Ueno  <ueno@gnu.org>
 
 	* gettext-0.18.2 released.
