--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2013-04-11  Daiki Ueno  <ueno@gnu.org>
+
+	* NEWS: Mention Lua support.
+
 2013-03-06  Daiki Ueno  <ueno@gnu.org>
 
 	* AUTHORS: Update from fencepost.gnu.org:/gd/gnuorg/copyright.list.
