--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,8 @@
+Version 0.18.3 - unreleased
+
+* xgettext now supports Lua.
+
+
 Version 0.18.2 - December 2012
 
 * xgettext now understands the block comment syntax of Guile 2.0.
