--- a/gettext-tools/ChangeLog
+++ b/gettext-tools/ChangeLog
@@ -1,3 +1,7 @@
+2013-04-15  Daiki Ueno  <ueno@gnu.org>
+
+	* woe32dll/gettextsrc-exports.c: Export formatstring_lua.
+
 2012-12-27  Daiki Ueno  <ueno@gnu.org>
 
 	Determine imported C symbol prefix at configure time.
