Update list of copyright assignments.

--- a/AUTHORS
+++ b/AUTHORS
@@ -52,3 +52,6 @@ Assigns Past and Future Changes
 
 GETTEXT         Miguel Angel Arruga Vivas
 Assigns past and future Changes
+
+GETTEXT         FutreLAB, AG
+Assigns past and future changes
