--- a/gettext-tools/src/ChangeLog
+++ b/gettext-tools/src/ChangeLog
@@ -1,5 +1,11 @@
 2013-04-22  Daiki Ueno  <ueno@gnu.org>
 
+	Make msgfmt --check-header more reliable.
+	* msgl-check.c (check_header_entry): Don't use c_strstr to parse
+	message header.
+
+2013-04-22  Daiki Ueno  <ueno@gnu.org>
+
 	Support CR/LF line terminators in Python sources even on Unix.
 	* x-python.c (phase0_getc, phase0_ungetc): New functions.
 	(phase1_getc): Use them instead of calling getc/ungetc directly.
