--- a/gettext-tools/src/ChangeLog
+++ b/gettext-tools/src/ChangeLog
@@ -1,3 +1,7 @@
+2013-04-18  Daiki Ueno  <ueno@gnu.org>
+
+	* xgettext.c (usage): Wrap long lines in --help output.
+
 2013-04-17  Andreas Stricker  <astricker@futurelab.ch>
 
 	Support for JavaScript.
