--- a/gettext-tools/ChangeLog
+++ b/gettext-tools/ChangeLog
@@ -1,3 +1,8 @@
+2013-04-26  Daiki Ueno  <ueno@gnu.org>
+
+	Support for Python brace format.
+	* woe32dll/gettextsrc-exports.c: Export formatstring_python_brace.
+
 2013-04-17  Andreas Stricker  <astricker@futurelab.ch>
 
 	Support for JavaScript.
