--- a/gettext-tools/doc/ChangeLog
+++ b/gettext-tools/doc/ChangeLog
@@ -1,3 +1,9 @@
+2013-04-26  Daiki Ueno  <ueno@gnu.org>
+
+	Support for Python brace format.
+	* gettext.texi (PO Files): Mention python-brace-format.
+	(python-format): Mention brace format.
+
 2013-04-17  Andreas Stricker  <astricker@futurelab.ch>
 
 	Support for JavaScript.
