--- a/gettext-tools/libgettextpo/ChangeLog
+++ b/gettext-tools/libgettextpo/ChangeLog
@@ -1,3 +1,8 @@
+2013-04-26  Daiki Ueno  <ueno@gnu.org>
+
+	Support for Python brace format.
+	* Makefile.am (libgettextpo_la_AUXSOURCES): Add format-python-brace.c.
+
 2013-04-17  Andreas Stricker  <astricker@futurelab.ch>
 
 	Support for JavaScript.
