--- a/gettext-tools/src/ChangeLog
+++ b/gettext-tools/src/ChangeLog
@@ -1,3 +1,17 @@
+2013-04-26  Daiki Ueno  <ueno@gnu.org>
+
+	Support for Python brace format.
+	* message.h (format_type): New enum value 'format_python_brace.
+	(NFORMATS): Increment.
+	* message.c (format_language): Add format_python_brace entry.
+	(format_language_pretty): Likewise.
+	* format.h (formatstring_python_brace): New declaration.
+	* format-python-brace.c: New file.
+	* format.c (formatstring_parsers): Add formatstring_python_brace.
+	* x-python.h (SCANNERS_PYTHON): Refar to formatstring_python_brace.
+	* xgettext.c (xgettext_record_flag): Handle format_python_brace.
+	* FILES: Update.
+
 2013-04-22  Daiki Ueno  <ueno@gnu.org>
 
 	Make msgfmt --check-header more reliable.
