--- a/gettext-tools/tests/ChangeLog
+++ b/gettext-tools/tests/ChangeLog
@@ -1,3 +1,10 @@
+2013-04-26  Daiki Ueno  <ueno@gnu.org>
+
+	Support for Python brace format.
+	* format-python-brace-1: New file.
+	* format-python-brace-2: New file.
+	* Makefile.am (TESTS): Add them.
+
 2013-04-22  Daiki Ueno  <ueno@gnu.org>
 
 	Support explicit string concatenation in Python.
