--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2013-04-26  Daiki Ueno  <ueno@gnu.org>
+
+	* NEWS: Mention Python brace format.
+
 2013-04-17  Daiki Ueno  <ueno@gnu.org>
 
 	* NEWS: Mention JavaScript support.
