--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2013-05-02  Daiki Ueno  <ueno@gnu.org>
+
+	* autogen.sh: Retrieve archive.dir.tar from FTP when bootstrapping.
+	Reported by Stefano Lattarini in
+	<https://lists.gnu.org/archive/html/bug-gettext/2012-12/msg00058.html>
+
 2013-04-26  Daiki Ueno  <ueno@gnu.org>
 
 	* NEWS: Mention Python brace format.
