--- a/gettext-tools/src/ChangeLog
+++ b/gettext-tools/src/ChangeLog
@@ -1,3 +1,11 @@
+2013-05-03  Daiki Ueno  <ueno@gnu.org>
+
+	* user-email.sh.in (lowercase_sed): Don't use non-portable
+	character escape in sed 's' command.
+	Reported by Ben Fox-Moore in
+	<http://lists.gnu.org/archive/html/bug-gettext/2013-05/msg00003.html>
+	and thanks to Ineiev for the suggestion.
+
 2013-04-26  Daiki Ueno  <ueno@gnu.org>
 
 	Support for Python brace format.
