--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2013-05-20  Pavel Kharitonov  <ineiev@gnu.org>  (tiny change)
+
+	Add --previous option to msgattrib.
+	* NEWS: Mention --previous msgattrib option.
+
 2013-05-13  Daiki Ueno  <ueno@gnu.org>
 
 	Fix bootstrap error on Mac OS X.
