--- a/gettext-tools/doc/ChangeLog
+++ b/gettext-tools/doc/ChangeLog
@@ -1,3 +1,8 @@
+2013-05-20  Pavel Kharitonov  <ineiev@gnu.org>  (tiny change)
+
+	Add --previous option to msgattrib.
+	* msgattrib.texi: Document --previous.
+
 2013-04-26  Daiki Ueno  <ueno@gnu.org>
 
 	Support for Python brace format.
