--- a/gettext-tools/po/ChangeLog
+++ b/gettext-tools/po/ChangeLog
@@ -1,3 +1,8 @@
+2013-06-04  Daiki Ueno  <ueno@gnu.org>
+
+	Support for Vala.
+	* POTFILES.in: Add src/x-vala.c.
+
 2013-04-30  Daiki Ueno  <ueno@gnu.org>
 
 	* POTFILES.in: Add src/format-javascript.c, src/format-lua.c,
