--- a/gettext-tools/tests/ChangeLog
+++ b/gettext-tools/tests/ChangeLog
@@ -1,3 +1,10 @@
+2013-06-04  Daiki Ueno  <ueno@gnu.org>
+
+	Support for Vala.
+	* xgettext-vala-1: New file.
+	* lang-vala: New file.
+	* Makefile.am (TESTS): Add them.
+
 2013-05-29  Stefano Lattarini  <stefano.lattarini@gmail.com>  (tiny change)
 
 	* Makefile.am (TESTS_ENVIRONMENT): Remove $(SHELL).
