--- a/gettext-runtime/intl/ChangeLog
+++ b/gettext-runtime/intl/ChangeLog
@@ -1,3 +1,7 @@
+2013-05-30  Thomas Petazzoni <thomas.petazzoni@free-electrons.com>  (tiny change)
+
+	* Makefile.in (SHELL): Use @SHELL@ instead of /bin/sh.
+
 2013-03-05  Daiki Ueno  <ueno@gnu.org>
 
 	* verify.h: Update copyright year.
