--- a/gettext-tools/tests/ChangeLog
+++ b/gettext-tools/tests/ChangeLog
@@ -1,3 +1,8 @@
+2013-06-06  Daiki Ueno  <ueno@gnu.org>
+
+	* lang-javascript: Check if gjs gettext and format modules are
+	available.
+
 2013-06-04  Daiki Ueno  <ueno@gnu.org>
 
 	Support for Vala.
