--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2013-06-13  Daiki Ueno  <ueno@gnu.org>
+
+	* NEWS: Document more new features.  Mention Glade msgctxt support
+	and msginit portability fix, and note that JavaScript support is
+	only partial.
+
 2013-06-11  Daiki Ueno  <ueno@gnu.org>
 
 	* NEWS: Mention that future 'gettextize' will require Automake 1.10.
