--- a/NEWS
+++ b/NEWS
@@ -2,18 +2,32 @@ Version 0.18.3 - unreleased
 
 * Programming languages support:
 
+  - Glade
+
+    xgettext now supports GtkBuider file format used by Glade 3.
+    xgettext now also extracts contexts (msgctxt) from Glade 2 and
+    GtkBuider files.
+
+  - JavaScript
+
+    xgettext now partially supports JavaScript.  Although the current
+    JavaScript specification (ECMA-262) does not define the standard
+    set of formatting methods nor translation functions, there is a
+    growing demand for xgettext to extract string literals more
+    reliably than using the C scanner.  The implementation supports
+    only a limited set of formatting methods and translation functions
+    commonly used in Gjs and other popular JavaScript libraries.
+
   - Lua
 
     xgettext now supports Lua.
 
-  - JavaScript
-
-    xgettext now supports JavaScript.
-
   - Python
 
     xgettext and msgfmt's format string checking now recognize Python
-    format string in braced syntax (PEP 3101).
+    format string in braced syntax (PEP 3101).  xgettext now also
+    supports explicit string concatenation with '+' and handles
+    platform dependent line terminators (LF/CR/CRLF) transparently.
 
   - Vala
 
@@ -22,10 +36,14 @@ Version 0.18.3 - unreleased
 * msgattrib now has --previous option to keep previous msgid when
   making messages fuzzy, similar to msgmerge --previous.
 
+* Portability:
+  - msginit now does not require GNU sed.
+
 * Future backward-incompatibilities:
   - In future Gettext versions, the files installed by 'gettextize'
     will require Automake 1.10 or later.  This will improve the
     compatibility of user projects with newer Automake versions.
+  - Glade 1 file support may be dropped in the future.
 
 Version 0.18.2 - December 2012
 
