--- a/gnulib-local/ChangeLog
+++ b/gnulib-local/ChangeLog
@@ -1,3 +1,7 @@
+2013-06-16  Andreas Schwab  <schwab@linux-m68k.org>  (tiny change)
+
+	* m4/libxml.m4 (gl_LIBXML): Remove extra quotes.
+
 2013-06-10  Daiki Ueno  <ueno@gnu.org>
 
 	* modules/libxml: Use $(MKDIR_P) instead of $(mkdir_p).
