--- a/ChangeLog
+++ b/ChangeLog
@@ -2,8 +2,7 @@
 
 	Embed Gnulib using git submodule.
 	* autogen.sh: Port git submodule update code from the 'bootstrap'
-	script in Gnulib and respect the GNULIB_SRCDIR envvar as well as
-	GNULIB_TOOL.
+	script in Gnulib and respect the GNULIB_SRCDIR envvar.
 	(cleanup_gnulib): New function borrowed from Gnulib.
 	(git_modules_config): Likewise.
 	(gnulib_path): New variable.
