--- a/gnulib-local/ChangeLog
+++ b/gnulib-local/ChangeLog
@@ -1,3 +1,9 @@
+2013-06-25  Daiki Ueno  <ueno@gnu.org>
+
+	Work around localcharset issue under OS X multi-threaded scenario.
+	* lib/localcharset.c.diff: New patch originally posted to Gnulib
+	<https://lists.gnu.org/archive/html/bug-gnulib/2012-12/msg00091.html>.
+
 2013-06-16  Andreas Schwab  <schwab@linux-m68k.org>  (tiny change)
 
 	* m4/libxml.m4 (gl_LIBXML): Remove extra quotes.
