--- a/gettext-tools/src/ChangeLog
+++ b/gettext-tools/src/ChangeLog
@@ -1,3 +1,10 @@
+2013-06-25  Daiki Ueno  <ueno@gnu.org>
+
+	Fix handling of \x and \u escape sequences in Tcl.
+	* x-tcl.c (do_getc_escaped): Fix handling of \x and \u.
+	Reported by Guido Berhoerster in
+	<https://lists.gnu.org/archive/html/bug-gettext/2013-06/msg00022.html>.
+
 2013-06-17  Daiki Ueno  <ueno@gnu.org>
 
 	* x-python.c (init_flag_table_python): Enable python-brace-format
