--- a/gettext-tools/tests/ChangeLog
+++ b/gettext-tools/tests/ChangeLog
@@ -1,6 +1,6 @@
 2013-06-25  Daiki Ueno  <ueno@gnu.org>
 
-	Fix handling of \x and \u escape sequences in Tcl.
+	Fix handling of \u escape sequences in Tcl.
 	* Makefile.am (TESTS): Add xgettext-tcl-4.
 	* xgettext-tcl-4: New test for escape sequences.
 
