--- a/gettext-tools/po/ChangeLog
+++ b/gettext-tools/po/ChangeLog
@@ -9,6 +9,7 @@
 	* pl.po: Update from Rafał Maszkowski <rzm@icm.edu.pl>.
 	* pt_BR.po: Update from Rafael Ferreira <rafael.f.f1@gmail.com>.
 	* sl.po: Update from Primoz PETERLIN <primozz.peterlin@gmail.com>.
+	* sk.po: Update from Marcel Telka <marcel@telka.sk>.
 	* sv.po: Update from Jan Djärv <jan.h.d@swipnet.se>.
 	* uk.po: Update from Yuri Chornoivan <yurchor@ukr.net>.
 	* vi.po: Update from Trần Ngọc Quân <vnwildman@gmail.com>.
