--- a/gettext-runtime/po/ChangeLog
+++ b/gettext-runtime/po/ChangeLog
@@ -1,3 +1,17 @@
+2013-07-07  Daiki Ueno  <ueno@gnu.org>
+
+	* cs.po: Update from Marek Černocký <marek@manet.cz>.
+	* de.po: Update from Jakob Kramer <jakob.kramer@gmx.de>.
+	* fi.po: Update from Jorma Karvonen <karvonen.jorma@gmail.com>.
+	* it.po: Update from Marco Colombo <m.colombo@ed.ac.uk>.
+	* ko.po: Update from Changwoo Ryu <cwryu@debian.org>.
+	* pl.po: Update from Rafał Maszkowski <rzm@icm.edu.pl>.
+	* pt_BR.po: Update from Rafael Ferreira <rafael.f.f1@gmail.com>.
+	* sl.po: Update from Primoz PETERLIN <primozz.peterlin@gmail.com>.
+	* sv.po: Update from Jan Djärv <jan.h.d@swipnet.se>.
+	* uk.po: Update from Yuri Chornoivan <yurchor@ukr.net>.
+	* vi.po: Update from Trần Ngọc Quân <vnwildman@gmail.com>.
+
 2013-06-25  Daiki Ueno  <ueno@gnu.org>
 
 	Allow user to supply custom sed command when generating en@quot.po.
