--- a/gettext-runtime/po/pl.po
+++ b/gettext-runtime/po/pl.po
@@ -1,22 +1,21 @@
 # Polish translations for the GNU gettext messages, gettext-runtime domain
 # Copyright (C) 1995, 1996, 1997, 1998, 1999, 2001, 2003, 2006, 2007, 2010, 2013 Free Software Foundation, Inc.
 # This file is distributed under the same license as the gettext package.
-# Rafał Maszkowski <rzm@icm.edu.pl>, 1995-1999, 2001, 2003, 2006, 2007, 2010, 2013	„”
+# Rafał Maszkowski <rzm@icm.edu.pl>, 1995-1999, 2001, 2003, 2006, 2007, 2010, 2013
 # Piotr Pogorzelski <ppogorze@ippt.gov.pl>, 1995
 msgid ""
 msgstr ""
 "Project-Id-Version: GNU gettext-runtime 0.18.2\n"
 "Report-Msgid-Bugs-To: bug-gnu-gettext@gnu.org\n"
 "POT-Creation-Date: 2012-12-25 14:19+0900\n"
-"PO-Revision-Date: 2013-02-26 21:40+0100\n"
+"PO-Revision-Date: 2013-03-08 15:40+0100\n"
 "Last-Translator: Rafał Maszkowski <rzm@icm.edu.pl>\n"
 "Language-Team: Polish <translation-team-pl@lists.sourceforge.net>\n"
 "Language: pl\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8-bit\n"
-"Plural-Forms: nplurals=3; plural=(n==1 ? 0 : n%10>=2 && n%10<=4 && (n%100<10 "
-"|| n%100>=20) ? 1 : 2);\n"
+"Plural-Forms: nplurals=3; plural=(n==1 ? 0 : n%10>=2 && n%10<=4 && (n%100<10 || n%100>=20) ? 1 : 2);\n"
 
 #: gnulib-lib/closeout.c:66
 msgid "write error"
@@ -29,58 +28,58 @@ msgstr "Nieznany błąd systemu"
 #: gnulib-lib/getopt.c:547 gnulib-lib/getopt.c:576
 #, c-format
 msgid "%s: option '%s' is ambiguous; possibilities:"
-msgstr "%s: opcja '%s' jest niejednoznaczna; możliwości:"
+msgstr "%s: opcja „%s” jest niejednoznaczna; możliwości:"
 
 #: gnulib-lib/getopt.c:624 gnulib-lib/getopt.c:628
 #, c-format
 msgid "%s: option '--%s' doesn't allow an argument\n"
-msgstr "%s: opcja '--%s' nie może mieć argumentu\n"
+msgstr "%s: opcja „--%s” nie może mieć argumentu\n"
 
 #: gnulib-lib/getopt.c:637 gnulib-lib/getopt.c:642
 #, c-format
 msgid "%s: option '%c%s' doesn't allow an argument\n"
-msgstr "%s: opcja '%c%s' nie może mieć argumentu\n"
+msgstr "%s: opcja „%c%s” nie może mieć argumentu\n"
 
 #: gnulib-lib/getopt.c:685 gnulib-lib/getopt.c:704
 #, c-format
 msgid "%s: option '--%s' requires an argument\n"
-msgstr "%s: opcja '--%s' wymaga argumentu\n"
+msgstr "%s: opcja „--%s” wymaga argumentu\n"
 
 #: gnulib-lib/getopt.c:742 gnulib-lib/getopt.c:745
 #, c-format
 msgid "%s: unrecognized option '--%s'\n"
-msgstr "%s: nierozpoznana opcja '--%s'\n"
+msgstr "%s: nierozpoznana opcja „--%s”\n"
 
 #: gnulib-lib/getopt.c:753 gnulib-lib/getopt.c:756
 #, c-format
 msgid "%s: unrecognized option '%c%s'\n"
-msgstr "%s: nierozpoznana opcja '%c%s'\n"
+msgstr "%s: nierozpoznana opcja „%c%s”\n"
 
 #: gnulib-lib/getopt.c:805 gnulib-lib/getopt.c:808
 #, c-format
 msgid "%s: invalid option -- '%c'\n"
-msgstr "%s: błędna opcja -- '%c'\n"
+msgstr "%s: błędna opcja -- „%c”\n"
 
 #: gnulib-lib/getopt.c:861 gnulib-lib/getopt.c:878 gnulib-lib/getopt.c:1088
 #: gnulib-lib/getopt.c:1106
 #, c-format
 msgid "%s: option requires an argument -- '%c'\n"
-msgstr "%s: opcja wymaga argumentu -- '%c'\n"
+msgstr "%s: opcja wymaga argumentu -- „%c'\n"
 
 #: gnulib-lib/getopt.c:934 gnulib-lib/getopt.c:950
 #, c-format
 msgid "%s: option '-W %s' is ambiguous\n"
-msgstr "%s: opcja '-W %s' jest niejednoznaczna\n"
+msgstr "%s: opcja „-W %s” jest niejednoznaczna\n"
 
 #: gnulib-lib/getopt.c:974 gnulib-lib/getopt.c:992
 #, c-format
 msgid "%s: option '-W %s' doesn't allow an argument\n"
-msgstr "%s: opcja '-W %s' nie może mieć argumentu\n"
+msgstr "%s: opcja „-W %s” nie może mieć argumentu\n"
 
 #: gnulib-lib/getopt.c:1013 gnulib-lib/getopt.c:1031
 #, c-format
 msgid "%s: option '-W %s' requires an argument\n"
-msgstr "%s: opcja '-W %s' wymaga argumentu\n"
+msgstr "%s: opcja „-W %s” wymaga argumentu\n"
 
 #: gnulib-lib/xmalloc.c:37
 #, c-format
@@ -123,7 +122,7 @@ msgstr "brakujące argumenty"
 #: src/envsubst.c:171 src/gettext.c:238 src/ngettext.c:207
 #, c-format
 msgid "Try '%s --help' for more information.\n"
-msgstr "Napisz '%s --help' żeby otrzymać więcej informacji.\n"
+msgstr "Napisz „%s --help” żeby otrzymać więcej informacji.\n"
 
 #: src/envsubst.c:176
 #, c-format, no-wrap
@@ -259,9 +258,9 @@ msgstr ""
 "ze zmiennej środowiskowej TEXTDOMAIN. Jeżeli katalog komunikatów nie zostanie\n"
 "znaleziony w domyślnym katalogu, inna lokalizacja może być podana przez\n"
 "zmienną środowiskową TEXTDOMAINDIR.\n"
-"Jeżeli użyty z opcją -s, program zachowuje się jak komenda 'echo', ale zamiast\n"
-"kopiować argumenty na standardowe wyjście tłumaczy komunikaty znalezione w\n"
-"wybranym katalogu.\n"
+"Jeżeli użyty z opcją -s, program zachowuje się jak polecenie „echo”, ale\n"
+"zamiast kopiować argumenty na standardowe wyjście tłumaczy komunikaty\n"
+"znalezione w wybranym katalogu.\n"
 "Domyślnie przeszukiwany katalog: %s\n"
 
 #: src/ngettext.c:212
