lua: fix crash when parsing '..' with non-string argument
Reported by Koen Dergent at <http://savannah.gnu.org/bugs/?39458>.
* x-lua.c (extract_balanced): Skip stray '..'.

--- a/gettext-tools/tests/ChangeLog
+++ b/gettext-tools/tests/ChangeLog
@@ -1,3 +1,7 @@
+2013-07-11  Daiki Ueno  <ueno@gnu.org>
+
+	* xgettext-lua-1: Add test case for string concatenation.
+
 2013-07-10  Daiki Ueno  <ueno@gnu.org>
 
 	gettext-tools: convert tests to use init.sh from Gnulib
