--- a/gettext-tools/tests/ChangeLog
+++ b/gettext-tools/tests/ChangeLog
@@ -1,3 +1,7 @@
+2013-07-21  Daiki Ueno  <ueno@gnu.org>
+
+	* Makefile.am (EXTRA_DIST): Add init.sh.
+
 2013-07-11  Daiki Ueno  <ueno@gnu.org>
 
 	* xgettext-lua-1: Add test case for string concatenation.
